--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ list (APPEND CMAKE_PREFIX_PATH "C:/Users/M416/vcpkg/installed/x64-windows")
 
 find_package(raylib CONFIG REQUIRED)
 
-add_executable(spaceinvader main.cpp spaceship.cpp game.cpp laser.cpp block.cpp obstacle.cpp alien.cpp)
+add_executable(spaceinvader main.cpp spaceship.cpp game.cpp laser.cpp block.cpp obstacle.cpp alien.cpp mysteryship.cpp)
 target_link_libraries(spaceinvader PRIVATE raylib)
 
